<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="25sp"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_mail"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"/>
        <EditText
            android:inputType="text"
            android:id="@+id/et_mail"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/ch_rememberPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="パスワードを保存"/>

    <Button
        android:id="@+id/bt_log"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_log"/>

    <Button
        android:id="@+id/bt_cancel"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_cancel"/>

    <Button
        android:id="@+id/bt_jump"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Jump"/>
    <Button
        android:id="@+id/bt_fragment"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="fragment"/>
    <Button
        android:id="@+id/bt_firebase_test"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Firebase"/>
    <Button
        android:id="@+id/bt_firebase_event"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Firebase_Event"/>
    <Button
        android:id="@+id/bt_hyouka"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="評価"/>
</LinearLayout>